--- a/java-web/app/src/main/webapp/board/index.html
+++ b/java-web/app/src/main/webapp/board/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-    <h1>장혜정 바보.</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>게시판입니다.</h1>
+    </body>
 </html>
