--- a/spring-webmvc/app/src/main/webapp/index.html
+++ b/spring-webmvc/app/src/main/webapp/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jva</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Spring Web MVC</title>
 </head>
 <body>
-    <!-- 내용 추가 -->
+    <h1>Spring Web MVC 예제</h1>
 </body>
 </html>
