--- a/myapp/app-server/src/main/resources/static/index.html
+++ b/myapp/app-server/src/main/resources/static/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome!</title>
+    <title>Title</title>
 </head>
 <body>
 <script>
-    location.href = "/app/home";
+    location.href= "/home";
 </script>
 </body>
 </html>
